# nfx-json

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_JsonAccess.cpp  BM_JsonIteration.cpp  BM_JsonModification.cpp  BM_JsonParsing.cpp  BM_JsonSchemaGeneration.cpp  BM_JsonSchemaValidation.cpp  BM_JsonSerialization.cpp  BM_JsonUniqueItems.cpp  CMakeLists.txt  README.md
cmake/: nfx-json-config.cmake.in  nfxJsonBuildConfig.cmake  nfxJsonDependencies.cmake  nfxJsonInstall.cmake  nfxJsonPackaging.cmake  nfxJsonSources.cmake  nfxJsonTargets.cmake  nfxJsonVersion.rc.in
doc/: CMakeLists.txt
include/nfx/: Json.h
include/nfx/json/: Builder.h  Concepts.h  Document.h  SchemaGenerator.h  SchemaValidator.h
include/nfx/json/detail/: Builder.inl  Document.inl  SchemaGenerator.inl  SchemaValidator.inl
samples/: CMakeLists.txt  Sample_JsonArrayIterator.cpp  Sample_JsonBuilder.cpp  Sample_JsonDocument.cpp  Sample_JsonFileIO.cpp  Sample_JsonMerge.cpp  Sample_JsonObjectFieldIterator.cpp  Sample_JsonPathView.cpp  Sample_JsonPerformance.cpp  Sample_JsonPointer.cpp  Sample_JsonSchemaGenerator.cpp  Sample_JsonSchemaValidator.cpp
src/: Document.cpp  Hash.h  JsonParser.h  JsonWriter.h  Parser.h  SchemaGenerator.cpp  SchemaValidator.cpp  Types.h  Vocabulary.h
test/: CMakeLists.txt  Tests_JsonArrayIterator.cpp  Tests_JsonArrays.cpp  Tests_JsonBuilder.cpp  Tests_JsonDocument.cpp  Tests_JsonDocumentAccess.cpp  Tests_JsonFileLoading.cpp  Tests_JsonObjectFieldIterator.cpp  Tests_JsonObjects.cpp  Tests_JsonPathView.cpp  Tests_JsonSchemaGenerator.cpp  Tests_JsonSchemaValidator.cpp  Tests_StringUtilsJsonEscape.cpp
